# ChangeLog for x11-drivers/xf86-input-evdev
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.239 2015/03/14 14:02:41 maekke Exp $

  14 Mar 2015; Markus Meier <maekke@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  arm stable, bug #530652

  06 Mar 2015; Jeroen Roovers <jer@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for HPPA (bug #530652).

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  add arm64 support, tested on A53 board

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for alpha, wrt bug #530652

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for sparc, wrt bug #530652

  22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for ia64, wrt bug #530652

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for ppc64, wrt bug #530652

  20 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for ppc, wrt bug #530652

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for x86, wrt bug #530652

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
  Stable for amd64, wrt bug #530652

  25 Jan 2015; Raúl Porcel <armin76@gentoo.org> xf86-input-evdev-2.9.0.ebuild,
  xf86-input-evdev-2.9.1.ebuild:
  Add ~sparc/~sh wrt #487944

*xf86-input-evdev-2.9.1 (27 Nov 2014)

  27 Nov 2014; Rémi Cardona <remi@gentoo.org> +xf86-input-evdev-2.9.1.ebuild:
  Bump to 2.9.1.

  23 Oct 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xf86-input-evdev-2.9.0.ebuild:
  Drop sh/sparc keywords, bug #487944.

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> xf86-input-evdev-2.8.2.ebuild:
  Stable for arm, wrt bug #500368

*xf86-input-evdev-2.9.0 (22 May 2014)
