@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare pretend setup test unpack
+DEPEND=>=x11-base/xorg-server-1.12[udev] dev-libs/libevdev sys-libs/mtdev >=x11-proto/inputproto-2.1.99.3 >=sys-kernel/linux-headers-2.6 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 x86-interix? ( >=sys-devel/libtool-2.2.6a sys-devel/m4 >=x11-misc/util-macros-1.18 >=media-fonts/font-util-1.2.0 ) ppc-aix? ( >=sys-devel/libtool-2.2.6a sys-devel/m4 >=x11-misc/util-macros-1.18 >=media-fonts/font-util-1.2.0 ) x86-winnt? ( >=sys-devel/libtool-2.2.6a sys-devel/m4 >=x11-misc/util-macros-1.18 >=media-fonts/font-util-1.2.0 ) virtual/pkgconfig x11-proto/inputproto x11-proto/kbproto x11-proto/xproto x11-base/xorg-server[xorg]
+DESCRIPTION=Generic Linux input driver
+EAPI=5
+HOMEPAGE=http://xorg.freedesktop.org/
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86
+LICENSE=MIT
+RDEPEND=>=x11-base/xorg-server-1.12[udev] dev-libs/libevdev sys-libs/mtdev x11-base/xorg-server:= x11-base/xorg-server[xorg]
+SLOT=0
+SRC_URI=http://xorg.freedesktop.org/releases/individual/driver/xf86-input-evdev-2.9.2.tar.bz2
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f	xorg-2	50dd640df6d0554c259daa81531ed3ee
+_md5_=9f4e678b8e57b383a4e9eeb945fff6a7
