@@ -7,18 +7,32 @@ DIST xf86-input-evdev-2.8.2.tar.bz2 369981 SHA256 750461749a83bdee7771592aa5c0db
 DIST xf86-input-evdev-2.8.4.tar.bz2 370325 SHA256 85fade9f5e9cf70f02c877165e95b3df4cdb9e08282416122ca80218e254100c SHA512 358909c9ba3a7cd094b4408b0c158964deabade0de160e1d8b9d4fde96b0fc65a7fd8e7dcf83203f4ec5edfe8bbf3870c258958cd0927cd6dbe415e983670e09 WHIRLPOOL 0f5cd7677c0f250b14be73fd99896d0ed27541997691c8f808e570b9e1ff83af6b4cec2c184fba0132197b3f687a33ff7ce0652e7aff7830314388a1b5eaacad
 DIST xf86-input-evdev-2.9.0.tar.bz2 372098 SHA256 0c0c4aa393cb027a2304967944867a21a340bcad2e5efe630291b6906c3abc35 SHA512 82b797bed6384b0cb7f79681086d91ac13ce8cddb8ce6dbb002caddc8f32396171c38b73e61e3aa9eaa3d78deb583c398d0f3e7a970ecf10a2a67c9e2979183f WHIRLPOOL f165762a316d6e8df27b209310239b99ab224191250eaa45f15f3688129ad5c7af2ca562baad6bae9a7848ffa1b364d9fdafc733c5c730dca8c5e9a9ac64f42b
 DIST xf86-input-evdev-2.9.1.tar.bz2 386505 SHA256 0ce30328adfeac90a6f4b508d992fb834d8e50b484b29d3d58cf6683fa8502f9 SHA512 0cd65a4dfc6f6c1a50814ff820019b6b2a26dd017e17e11785e37b1705c1d6adccf017781f92a5abbb2204f812a13351cc44d542ee721c9f8c0cec91b6f15975 WHIRLPOOL 9ea9e1bfb1d1d6da87ae2b742bcd3b68a0dc608f4e98297c768dbc3783bb92582f0f93fa3cc772563beab9271620f7a0cc117716b8876803b92069c8b1e01faa
+DIST xf86-input-evdev-2.9.2.tar.bz2 387095 SHA256 792329b531afc6928ccda94e4b51a5520d4ddf8ef9a00890a5d0d31898acefec SHA512 258c4c391fdd5a3c5a5bef86f55f27d47fd7527f37edd601ee76c0acc2e1830e8899cc8d7a59d646b49f3f23d93971bcc70a76185a7580942935cbf3a0d888f7 WHIRLPOOL 550e7c292960c1d04c0e650eee9825dd81ec26f4bbb3817417925857063930bad98f7bd27769f04fee736f4e7f0e7df40696bf8e0287c7355d477a7b3cc23745
 EBUILD xf86-input-evdev-2.7.3.ebuild 523 SHA256 202866af83e0d33b0114b688ce3091a5b4827fad117317e30c36244fdf9c8029 SHA512 b660e55755b6aeedb2f85abc0299424dc66d246eac7bb7297cb9c74ed09c6079924e9bc455bfe7026c934e31034b51c681dc8312ea32d19f34989000761abc97 WHIRLPOOL c2fa063a41a4dd0090354c06c7a73b642915553992a1bab4cc3f26d3ab188ef7a137099902a0aef3bc883b35af84bef5e3286f580f12ea7423957161dbaaf9d9
 EBUILD xf86-input-evdev-2.8.1.ebuild 524 SHA256 9972ef839167b0e3459de026f8ab31c54d5541dc53c88d268eef3fe52fd1a023 SHA512 42e37f783b95651a054416eb5f53b83a10d2c9b94951c022720e7d289e72eece0f7ee4f124a03623916c209c4149f984f30c0f9b34fe1899a867d44db0a997e3 WHIRLPOOL a2d4d49d547a32613f695feff714e61dbac5f7ee8e5be5df583ef6054b9ccac5e44386eff767291a4813f4ac02496c9d250d7707ec2b299a2c60d47bf3c7b22a
 EBUILD xf86-input-evdev-2.8.2.ebuild 636 SHA256 4ca351671329cda54de205a7494584d6ae0160394878571939e95122ee02256a SHA512 26340d107d46548c516518c9190a995376c93bfe4e16007e287b1b67be09f01ef28321bba380d72018d9f2e9c9a606576559e002d410e643f8665b6f0b983b3f WHIRLPOOL 11ff52ba02508c60cd2bc2040a4e0a1bf58b5a0698d2fe8886575d75944e5fe8bf3c54c95c7792fc0d4a2bafc8377bfa67e90c4cdbdcaf93908e0a17113352fa
 EBUILD xf86-input-evdev-2.8.4.ebuild 649 SHA256 f8b9d79e6b6a3af00be76c62b429a47cdef29bcaa3f3f247a8c27b2b8765975e SHA512 7b63116212e23a33561ee8ff60ba49b142190540a852d7d8353ddf23c2a11fd48920127b2cb89b673dd015469aa7cc31531f082ede5b96d3faade7b077c49792 WHIRLPOOL 34492b8804dee76201ca24694a656139419e13d644092ca002ba437ce12671b2b9705f55f1587c5df41ae7623596888953762eda85e58df73b48d2083cea9883
 EBUILD xf86-input-evdev-2.9.0.ebuild 667 SHA256 7b44df265ca105854514b82f31ce2046965a88c57b8ae5d33d89cf30cfe3d2b1 SHA512 b26b4c547a7589cbdb5c1dce9a7545897bdc9fccb8e2f616a3a513925aed09aa8c8d5f6e8e8ab7e12e75c77d9f6955c41138dd0c0e101b3a03aa8bc7d7f7ee27 WHIRLPOOL 98c1929104e420e76dbcf239d14231d491745efde6d3ddc3f06fe7715a4baf5c4b83948a9aca7d31fed52f7501bc148973c677289e2cbb3f040632f99dfbfdba
 EBUILD xf86-input-evdev-2.9.1.ebuild 665 SHA256 1412f934a099ead760a7fc66451f227cc66f8c771d2060c665b4f68d216c87d9 SHA512 b1242922d5a1f5c7b6729471e50dadc92f62bf446d78ff356eaf348abaa8a7a14164c3cb8854e3b03bab90beecc407978dd3819ab98d711849f833ccf6e7e1c1 WHIRLPOOL e789e36cd54b73ad898fd7d3d11b69cc758b94bb5355297c00b89c44580ec4e12667852a793fcd1b66db973deb02cb2914f8307d10766f9a0b65fcbbe91f6f73
-MISC ChangeLog 36020 SHA256 31b56d6f818e643ff32c3bcb6da1a64ba25085aa54ed252eebbf86f92c27ef30 SHA512 b9031e68dd4ebd367ddc472d6921b997a96179bef64a5c092334f6cd5ac55797edfb43eea40c5f639a682be5eff587fa9659018d95375199e5d1496736d9322d WHIRLPOOL a504fc00643cca3a344cdb8a656b0c74e1f0170a39f8c70bed67107f831c2c354ac172228fbe64adde1d8bab8fef253bd2301e3647a01a1f5f36f910ca67c033
+EBUILD xf86-input-evdev-2.9.2.ebuild 675 SHA256 5049d82e57f5bff6d193cfacde8d3f0cc4cee4e62f3b86974a7581e814d168f3 SHA512 a7ea0930e3409bef163e6dd77109548d1a201b0ea05b2a0c17b134c5ef3f33f26f277144faa364838b563fccc59f2dbc8ec1c296bac155b98fe32f307b1607ee WHIRLPOOL 8b03f4ca7c2dff4fa82705ec95b39c5d9cf2500b53fb5d3c4ddfbce3d9665e3f9b10e2cfe6d4785fe1089db842042aa45dcb64bb82c6566713b27da769818324
+MISC ChangeLog 36181 SHA256 372bf6d1d92bebe318e9304f2a5c60144c459736b40519cee92cd3a1c0bda292 SHA512 7907adf262e30371a0a56491f5c0837ca7336859c6e1281fa5a4594a0c88b768ad9aad4de209db7f4040a1343399af90afbe98c3ba34445067129e2d7a71aedf WHIRLPOOL 8d02a1577bae17235bce5a225cdb456ebe13646d18d640f5fa2c9854269ff71ac08649efcb38dbf2f397f743d32100f41970638291e1e11bd49fbae84858972a
 MISC metadata.xml 156 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 SHA512 daa9bb2a9b1a16220327bc394f10d93a1a8a427bfbed8808cd247c1dfd5a5b87a4945d55d8243e07fede2c8182a208c618ebd483773d77e9d23862ec77016019 WHIRLPOOL 691e028648bb8b60771d74ef718c51fdb0f4a587e984f6ac4c13d7796415ecf770df2e0fd766399091771924bb65995e9bb290baa35971c56e07d76f2bbf6d93
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlUEQHgACgkQkKaRLQcq0GJSQQCgixKs4mwqWJzEzs9BXJzNzQ8a
-yawAnjjfF7ENRIfWQRuIvx/KT163GiBN
-=mpmQ
+iQJ8BAEBCABmBQJVGUMZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
+MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRYysQAI9ivR3J7qxtx0PfdPUOdq0I
+dPPhfRBEsSmTAF7q79x/AqkQn549k0EjZzeTMeQ2UNG6C03lZ2wUpOXVO7d5n+SA
+mFBxNDO86DjVQYSwj53RyoSjOR+rRWmbzjBPuyuuymNwnyDFXhCn+GLtqlRE5RHO
+6r8ndaPKGIk92ZYLvedmtof4j66TqcAlzmq4CggtuY98tMWA4QaYZShpLPGfCU6J
+3emm4dVvFIyge8z3fo0nkVGCJcTOLsBZLHCoJmxZ4TTH9CoGUS7zYrDrJiS1/3k6
+VGSPIkfTFSIcyFXLuAzLXUKqNLfofCLx7lbUn30dZJWec+QVWZGtnnBmkYT/pQ3D
+oNNxQ88kZ2OLoxlL8jiUmKXqqxbJudHyR4iW+qTvAdrrh6wLW1YTniQhVP/ShzfS
+Jvsnooch0hqYgU7QJLaUZkEkXSP4TXQoMqQ0LMseRHNPMRo9Gwtayvw853WCm4J5
+h1i0WWAYJAyBYCjyacLjgULbpr0HGZs7xDTo9vVLxMIdKSxQdHvfH18+hIxB86Jl
+EbX95zPdt183YWoSIkfB37MpofUrfONNFVerhS9NFiW2Cr11vW4g7Gtaph4J8dWw
+yZrYP0hvWlk1ZyDvK4oX4c41WaSCKLebwsz5yOhPU0oYwo15XZuHchY4+KYumN7m
+MewDQu7l3n9qcTPj2Phm
+=A8+D
 -----END PGP SIGNATURE-----
