@@ -1,0 +1,24 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/xf86-input-evdev-2.9.2.ebuild,v 1.1 2015/03/30 12:34:56 chithanh Exp $
+
+EAPI=5
+inherit linux-info xorg-2
+
+DESCRIPTION="Generic Linux input driver"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86"
+IUSE=""
+
+RDEPEND=">=x11-base/xorg-server-1.12[udev]
+	dev-libs/libevdev
+	sys-libs/mtdev"
+DEPEND="${RDEPEND}
+	>=x11-proto/inputproto-2.1.99.3
+	>=sys-kernel/linux-headers-2.6"
+
+pkg_pretend() {
+	if use kernel_linux ; then
+		CONFIG_CHECK="~INPUT_EVDEV"
+	fi
+	check_extra_config
+}
