@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.408 2015/03/26 16:45:43 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.409 2015/03/30 12:31:49 chithanh Exp $
+
+*xterm-317 (30 Mar 2015)
+
+  30 Mar 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +xterm-317.ebuild:
+  Version bump.
 
 *xterm-315 (26 Mar 2015)
 
