@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-input-evdev
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.239 2015/03/14 14:02:41 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-evdev/ChangeLog,v 1.240 2015/03/30 12:34:56 chithanh Exp $
+
+*xf86-input-evdev-2.9.2 (30 Mar 2015)
+
+  30 Mar 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +xf86-input-evdev-2.9.2.ebuild:
+  Version bump.
 
   14 Mar 2015; Markus Meier <maekke@gentoo.org> xf86-input-evdev-2.9.1.ebuild:
   arm stable, bug #530652
